Add option to start nrt point after connecting to new primary
